app/assets/stylesheets/application.scss
@import "bootstrap-sprockets";
@import "bootstrap";

@import "animate.css";
html{
  position:relative; 
  min-height: 100%;
}
.noDecoration{
	text-decoration: none;
}
.icon-bar{
	background-color: #011627;
}
.logo{
	color:#011627;
	border: 3px solid #011627;
	font-size: 1em;
	padding: 0.25em 3em;
	font-family: "Bradley Hand";
	width:30rem;
}
.nav-links{
	color:#011627;
	font-size: 0.85em;
	margin: 2em 3em;
	padding: 1em 2em;
	float:right;
	font-family: "Bradley Hand";

	
	

}
.fontBradley{
	font-family: "Bradley Hand";
}
.fontLato{
	font-family: 'Lato', sans-serif;
}
.nav-links a{
	text-decoration: none;
	color:#011627;
	margin: 0.7em;
	font-size:	1.1em;
}
header{
	

}
*{
	box-sizing: border-box;
}

.clearfix{
	overflow: auto;
}
.wrapper{
	width:90%;
	margin: 2em auto;
	text-align:center;
}
.col-1,.col-2,.col-3{
	color:#011627;
	float:left;
	text-align:left;
}
.col-1{

	width:30em;
	padding:0 5% 0 2.5%;

}
.col-2{
	width:25em;
	padding:0 5% 0 2.5%;

}
.col-3{
	width:25em;
	padding:0 5% 0 2.5%;

}
.hr-special{
	display:block;
	height:2px;
	border: 2px solid #e71d36;
}

.projectViews{
	height:30rem;
	font-size:3rem;
	background-color:white;
	text-align:center;
	padding:2rem;
}
.projectViews:hover{
	background-color:#CFD8DC;
	color:white;
	
}
.postViews{
	border-radius: 0.5rem;
	border:2px solid #e2e2e2;
	margin:0.2rem;
	padding:0em;
	display:inline-block;
	width:90%;
	background-color:white;
}
.postViews:hover{
	background-color:#f2f2f2;
	box-shadow: 4px 4px 4px 4px #e2e2e2;
}
.eventViews{
	border-radius: 1rem;
	border:2px solid #e2e2e2;
	margin:1.5rem;
	display:inline-block;
	width:90%;

	background-color:white;
}
.eventViews:hover{
	box-shadow: 4px 4px 4px 4px #e2e2e2;
}
a{
	color:#2EC4B6;
}
a:hover{
	color:#011627;
	text-decoration:none;
}

.footer {

	position:absolute;
	bottom: 0rem;
	width:100%;
	height:80px;
	background-color:#2EC4B6;
	padding:1rem;
	left: 0;

}
#notification{
	position:absolute;
	width:100%;
	text-align:center;
	height:3em;
	opacity:0.7;
	background-color:white;
}
hr-2{
	display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid black;
    margin: 1em 0;
    padding: 0;
}

body{
	background-color:white;
}
textarea{
	resize:none;
}
.checkitoutbtn{
	background-color:#2EC4B6;
}

#menu-toggle {
    z-index: 1;
    position: fixed;
    top: 0;
    right: 0;
}
.btn {
  border-radius: 0 !important;
}
#top{
	background-color:#f9f6d7;
	height:750px;	
	text-align:center;
}
#middle{
	background-color:white;
	height:750px;	
	text-align:center;
}
#bottom{
	background-color:#2EC4B6;
	min-height:750px;	
	text-align:center;
}
.morebtn{
	background-color:#d04c3f;
	color:black;
	font-size:3rem;
	padding:1rem;
	font-weight:700;
	border: 0px
}
.checkbtn{
	background-color:#d04c3f;
	color:black;
	font-size:2rem;
	padding:0.8rem;
	font-weight:500;
	border:3px solid black;

}
.indexproject{
	width:33rem;
	height:23rem;
	background-color:white;
	float:left;
	margin:1.3rem;
	-webkit-transition: all 0.2s linear;
    -o-transition: all 0.2s linear;
    -moz-transition: all 0.2s linear;
    -ms-transition: all 0.2s linear;
    -kthtml-transition: all 0.2s linear;
    transition: all 0.2s linear;
	
}
.whoami-middle{
	font-size:5rem;
	font-weight:700;
	color:#353535;
	letter-spacing:0.5rem
}
ul li{
	text-decoration: none;
}
#mainmenu p{
	font-size:5rem;
}
#mainmenu p a{
	color:black;
}
#mainmenu p a:hover{
	color:#2EC4B6;
	text-decoration:none;
}


.shadow {
    -webkit-box-shadow: 0px 0px 10px 5px black;
    -moz-box-shadow: 0px 10px 5px 5px black;
    box-shadow: 0px 0px 10px 5px black;
    -webkit-transition: all 0.2s linear;
    -o-transition: all 0.2s linear;
    -moz-transition: all 0.2s linear;
    -ms-transition: all 0.2s linear;
    -kthtml-transition: all 0.2s linear;
    transition: all 0.2s linear;
}
.digg_pagination {
  background: white;
  cursor: default;
  /* self-clearing method: */ }
  .digg_pagination a, .digg_pagination span, .digg_pagination em {
    padding: 0.2em 0.5em;
    display: block;
    float: left;
    margin-right: 1px; }
  .digg_pagination .disabled {
    color: #999999;
    border: 1px solid #dddddd; }
  .digg_pagination .current {
    font-style: normal;
    font-weight: bold;
    background: #d04c3f;
    color: white;
    border: 1px solid #d04c3f; }
  .digg_pagination a {
    text-decoration: none;
    color: black;
    border: 1px solid black; }
    .digg_pagination a:hover, .digg_pagination a:focus {
      color: black;
      border-color: black; }
  .digg_pagination .page_info {
    background: black;
    color: white;
    padding: 0.4em 0.6em;
    width: 22em;
    margin-bottom: 0.3em;
    text-align: center; }
    .digg_pagination .page_info b {
      color: black;
      background: black;
      padding: 0.1em 0.25em; }
  .digg_pagination:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden; }
  * html .digg_pagination {
    height: 1%; }
  *:first-child + html .digg_pagination {
    overflow: hidden; }

